ix: address fifth round of Copilot review comments